rke2.d/alcide/master/manifests.d/cicd/tekton-dashboard/01-namespace-tekton-dashboard.yml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Namespace|default|tekton-dashboard'
    kpt.dev/package-layer: cicd
    kpt.dev/package-name: tekton-dashboard
  labels:
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-dashboard
  name: tekton-dashboard
