rke2.d/alcide/master/manifests.d/cicd/tekton-dashboard/02-middleware-tekton-dashboard-strip.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: traefik.containo.us|Middleware|tekton-pipelines|tekton-dashboard-strip
    kpt.dev/package-layer: cicd
    kpt.dev/package-name: tekton-dashboard
  name: tekton-dashboard-strip
  namespace: tekton-pipelines
spec:
  stripPrefix:
    prefixes:
      - /tekton
