rke2.d/alcide/master/manifests.d/cicd/tekton-dashboard/02-deployment-tekton-dashboard.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: apps|Deployment|tekton-pipelines|tekton-dashboard
    kpt.dev/package-layer: cicd
    kpt.dev/package-name: tekton-dashboard
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.63.1
    dashboard.tekton.dev/release: v0.63.1
    version: v0.63.1
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: default
      app.kubernetes.io/name: dashboard
      app.kubernetes.io/part-of: tekton-dashboard
  template:
    metadata:
      annotations:
        kpt.dev/package-layer: cicd
        kpt.dev/package-name: tekton-dashboard
      labels:
        app: tekton-dashboard
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: default
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/part-of: tekton-dashboard
        app.kubernetes.io/version: v0.63.1
      name: tekton-dashboard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: NotIn
                    values:
                      - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: dashboard
                    app.kubernetes.io/instance: default
                    app.kubernetes.io/name: dashboard
                    app.kubernetes.io/part-of: tekton-dashboard
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - --default-namespace=
            - --external-logs=
            - --log-format=json
            - --log-level=info
            - --logout-url=
            - --namespaces=
            - --pipelines-namespace=tekton-pipelines
            - --port=9097
            - --read-only=false
            - --stream-logs=true
            - --triggers-namespace=tekton-pipelines
          image: ghcr.io/tektoncd/dashboard/dashboard-9623576a202fe86c8b7d1bc489905f86:v0.63.1@sha256:16eca97b649f6f27dfbab2be167be0afc34bab43af9d3304f64bf7f04d44e606
          livenessProbe:
            httpGet:
              path: /health
              port: 9097
          name: tekton-dashboard
          ports:
            - containerPort: 9097
          readinessProbe:
            httpGet:
              path: /readiness
              port: 9097
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: tekton-dashboard
      volumes: []
