rke2.d/alcide/master/manifests.d/cicd/tekton-dashboard/02-service-tekton-dashboard.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|tekton-pipelines|tekton-dashboard'
    kpt.dev/package-layer: cicd
    kpt.dev/package-name: tekton-dashboard
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.63.1
    dashboard.tekton.dev/release: v0.63.1
    version: v0.63.1
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ports:
    - name: http
      port: 9097
      protocol: TCP
      targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
